kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: npcl-voice-assistant
  labels:
    name: npcl-voice-assistant
    app: voice-assistant
